--- a/week14.html
+++ b/week14.html
@@ -81,7 +81,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (6)</b></font></td></tr>
 <tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Spears</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Johnston</td>      <td></td><td align=right>0</td></tr>
