--- a/week14.html
+++ b/week14.html
@@ -57,7 +57,7 @@
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Borregales</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Golden</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
