--- a/week16.html
+++ b/week16.html
@@ -39,7 +39,7 @@
 <tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>Rice</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Pineiro</td>       <td></td><td align=right>0</td></tr>
