--- a/week16.html
+++ b/week16.html
@@ -84,7 +84,7 @@
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Samuel</td>        <td></td><td align=right>0</td></tr>
-<tr><td>WRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Shough</td>        <td></td><td align=right>0</td></tr>
