--- a/week16.html
+++ b/week16.html
@@ -37,9 +37,9 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (2)</b></font></td></tr>
 <tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Rice</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Pineiro</td>       <td></td><td align=right>0</td></tr>
@@ -98,7 +98,7 @@
 <tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
