--- a/week17.html
+++ b/week17.html
@@ -23,9 +23,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (10)</b></font></td></tr>
 <tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Judkins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>CroskeyMerritt</td><td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Shaheed</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hampton</td>       <td></td><td align=right>0</td></tr>
@@ -36,14 +36,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (6)</b></font></td></tr>
-<tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Ewers</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Harvey</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -51,11 +51,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (9)</b></font></td></tr>
 <tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Loveland</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Dart</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
