--- a/week17.html
+++ b/week17.html
@@ -7,7 +7,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (5)</b></font></td></tr>
-<tr><td>Jackson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Young</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
 <tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
